@@ -58,6 +58,7 @@ targetCompatibility = 1.6
 apply from: 'gradle/github.gradle'
 apply from: 'gradle/maven.gradle'
 apply from: 'gradle/bintray.gradle'
+<% if (enableQualityChecks) { %>apply from: 'gradle/quality.gradle'<% } %>
 
 
 repositories {
